--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "src/index.js",
   "scripts": {
     "start-dev": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "format": "prettier --write \"src/**/*.js\""
   },
   "devDependencies": {
+    "prettier": "3.3.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "animejs": "^3.2.2",
     "sweetalert2": "^11.12.4"
   }
 }
