--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "A notes app using RESTful API and webpack",
   "main": "src/index.js",
   "scripts": {
-    "start-dev": "webpack-dev-server --mode development",
-    "build": "webpack --mode production",
+    "start-dev": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
     "format": "prettier --write \"src/**/*.js\""
   },
   "devDependencies": {
     "prettier": "3.3.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^6.0.1"
   },
   "dependencies": {
     "animejs": "^3.2.2",
